[package]
name = "emacs-jni"
version = "0.1.0"
authors = ["Tuấn-Anh Nguyễn <ubolonton@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "jni_dyn"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.16"
jni = { version = "0.18", features = ["invocation"]}
gag = "0.1"
once_cell = "1.2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release.build-override]
opt-level = 0
